--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,3 @@
-- Generalise dXdt to include cross-constants c1,c2,k1,k2
+- Add more models
+
+- Generalise dXdt to include cross-constants c1,c2,k1,k2?
