Updating to do list

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,13 @@
 Short term
 ----------
-- Label plots
-- Add more models
+- Add more models:
+	- Full Sommerfeld (3.4.2)
+	- Naive Half-Sommerfeld (3.4.3)
+	- Dynamic Half-Sommerfeld (3.4.4)
+	- One of the other friction-based models?
+	- Some kind of idealized artificial nonlinearity?
+
+- Proper LaTeX labelling of plots
 
 Long term
 ---------
