--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 Short term
 ----------
+- Apply a transformation to retrieve the position of the centre of rotation
+  rather than the centre of mass - i.e. the 'actual' rotor position.
 - On spatial plots, add a circle to indicate collision between rotor and
   stator.
 
