--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,11 @@
 Short term
 ----------
+- Produce spectral plots across a range of parameters to illustrate
+  interesting phenomena in Lubrication and VdH models.
+
+Long term
+---------
+- Generalise dXdt to include cross-constants c1,c2,k1,k2?
 - Add more models:
 	- Full Sommerfeld (3.4.2)
 	- Dynamic Half-Sommerfeld (3.4.4) 
@@ -9,6 +15,3 @@ Short term
 - Proper LaTeX labelling of plots
 - Waterfall plots
 
-Long term
----------
-- Generalise dXdt to include cross-constants c1,c2,k1,k2?
