--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,15 @@
 Short term
 ----------
 - Edit the dXdt function (and its implementations) so that h is no longer
-  taken as a primary parameter.
+  taken as a primary parameter. (This will simplify the code but have no
+  actual effect on any results)
+
 - Produce spectral plots across a range of parameters to illustrate
   interesting phenomena in Lubrication and VdH models.
-- Waterfall/heatmap plots?
+
+- Extend these 'ranges of plots' to full brute-force bifurcations which
+  produce heatmaps / waterfalls plots. Will require extremely long
+  (overnight?) computations.
 
 Long term
 ---------
@@ -13,4 +18,4 @@ Long term
 	- Full Sommerfeld (3.4.2)
 	- Dynamic Half-Sommerfeld (3.4.4) 
 	- One of the friction-based models?
-	- Some kind of idealized artificial nonlinearity?
+	- Some kind of 'idealized' artificial nonlinearity?
