--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
 Short term
 ----------
+- Use PSD plots rather than raw log-fft plots (reading required to understand
+  these!)
+
 - Edit the dXdt function (and its implementations) so that h is no longer
   taken as a primary parameter. (This will simplify the code but have no
   actual effect on any results)
