--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,10 @@
 Short term
 ----------
-- Use PSD plots rather than raw log-fft plots (reading required to understand
-  these!)
-
 - Edit the dXdt function (and its implementations) so that h is no longer
   taken as a primary parameter. (This will simplify the code but have no
   actual effect on any results)
+
+- More general tidying up of code - remove obsolete/incorrect functions
 
 - Produce spectral plots across a range of parameters to illustrate
   interesting phenomena in Lubrication and VdH models.
