More parameter exploration, adding to todo list

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,9 @@ Short term
 ----------
 - More general tidying up of code - remove obsolete/incorrect functions
 
+- Work out how much computation times is spent on finding solutions v.
+  calculating fft - possibly alter tolerances as a result of this.
+
 - Write code which saves solution data to files so that it can be processed
   in different ways
 
